# leafy-bank-backend-transactions

./: .drone.yml  .gitignore  Dockerfile.backend  README.md  docker-compose.yml
backend/: main.py  pyproject.toml  testing_transaction_service.py
backend/data/sample/: leafy_bank.notifications.json  leafy_bank.transactions.json
backend/database/: connection.py
backend/services/: transactions_service.py
environments/: prod.yaml  staging.yaml
